update the code

--- a/control_calculator/Untitled3.ipynb
+++ b/control_calculator/Untitled3.ipynb
@@ -39,11 +39,11 @@
     "id": "8VJRktk5i9GB",
     "outputId": "654b77d7-760a-4a0c-c64d-ec2c94537c1b",
     "ExecuteTime": {
-     "start_time": "2023-05-30T23:29:40.702944Z",
-     "end_time": "2023-05-30T23:29:43.233253Z"
+     "start_time": "2023-05-31T00:41:17.650882Z",
+     "end_time": "2023-05-31T00:41:19.769578Z"
     }
    },
-   "execution_count": 1,
+   "execution_count": 33,
    "outputs": [
     {
      "name": "stdout",
@@ -69,9 +69,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "# Ler os dados do arquivo\n",
     "filename = 'result1.txt'\n",
     "tempo = []\n",
@@ -84,13 +85,18 @@
     "        t, e, s, _ = line.strip().split(';')\n",
     "        tempo.append(float(t)/1000000)\n",
     "        entrada.append(float(e))\n",
-    "        saida.append(float(s))"
+    "        saida.append(float(s))\n",
+    "\n",
+    "# Convertendo listas para numpy arrays\n",
+    "tempo = np.array(tempo)\n",
+    "entrada = np.array(entrada)\n",
+    "saida = np.array(saida)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-30T23:29:43.235246Z",
-     "end_time": "2023-05-30T23:29:43.302067Z"
+     "start_time": "2023-05-31T00:41:19.772579Z",
+     "end_time": "2023-05-31T00:41:19.829429Z"
     }
    }
   },
@@ -123,11 +129,11 @@
     "id": "6ktFZd0xnp_M",
     "outputId": "aa27b81e-e9b7-4224-882c-ef0528307f19",
     "ExecuteTime": {
-     "start_time": "2023-05-30T23:29:43.266164Z",
-     "end_time": "2023-05-30T23:29:44.398736Z"
+     "start_time": "2023-05-31T00:41:19.802490Z",
+     "end_time": "2023-05-31T00:41:20.364854Z"
     }
    },
-   "execution_count": 3,
+   "execution_count": 35,
    "outputs": [
     {
      "data": {
@@ -157,11 +163,11 @@
     "id": "oEed58Dz3D7S",
     "outputId": "9b3e5cf4-62f4-4f77-db02-e96944f68487",
     "ExecuteTime": {
-     "start_time": "2023-05-30T23:29:44.400731Z",
-     "end_time": "2023-05-30T23:29:44.530386Z"
+     "start_time": "2023-05-31T00:41:20.199296Z",
+     "end_time": "2023-05-31T00:41:20.364854Z"
     }
    },
-   "execution_count": 4,
+   "execution_count": 36,
    "outputs": [
     {
      "name": "stdout",
@@ -179,7 +185,6 @@
   {
    "cell_type": "code",
    "source": [
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.signal import butter, filtfilt\n",
     "\n",
@@ -236,11 +241,11 @@
     "id": "N0DMg1_76myn",
     "outputId": "20794654-74b9-4a9c-ff50-2939b1b18c05",
     "ExecuteTime": {
-     "start_time": "2023-05-30T23:29:44.418684Z",
-     "end_time": "2023-05-30T23:29:45.687550Z"
+     "start_time": "2023-05-31T00:41:20.288059Z",
+     "end_time": "2023-05-31T00:41:20.725840Z"
     }
    },
-   "execution_count": 5,
+   "execution_count": 37,
    "outputs": [
     {
      "data": {
@@ -261,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "outputs": [
     {
      "data": {
@@ -318,15 +323,23 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-30T23:29:45.697527Z",
-     "end_time": "2023-05-30T23:29:46.093468Z"
+     "start_time": "2023-05-31T00:41:20.723849Z",
+     "end_time": "2023-05-31T00:41:21.072426Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\pi_me\\PycharmProjects\\labii\\venv\\lib\\site-packages\\control\\timeresp.py:935: UserWarning: return_x specified for a transfer function system. Internal conversion to state space used; results may meaningless.\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "data": {
       "text/plain": "<Figure size 640x480 with 1 Axes>",
@@ -342,11 +355,11 @@
     "from control.matlab import *\n",
     "from scipy.interpolate import interp1d\n",
     "\n",
-    "# Cria uma função de interpolação para os dados de entrada\n",
+    "# Cria uma função de interpolação para a entrada\n",
     "interp_saida = interp1d(tempo, saida, kind='linear', fill_value='extrapolate')\n",
     "\n",
     "# Cria um novo vetor de tempo igualmente espaçado\n",
-    "ts = np.mean(np.diff(tempo))  # assume que tempo é o seu vetor de tempo\n",
+    "ts = np.mean(np.diff(tempo))\n",
     "tempo_interp = np.arange(tempo[0], tempo[-1], ts)\n",
     "\n",
     "# Usa a função de interpolação para obter a entrada correspondente ao novo vetor de tempo\n",
@@ -390,18 +403,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-31T00:22:40.792009Z",
-     "end_time": "2023-05-31T00:22:41.135214Z"
+     "start_time": "2023-05-31T00:42:39.425909Z",
+     "end_time": "2023-05-31T00:42:39.817107Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-05-31T00:41:21.413526Z",
+     "end_time": "2023-05-31T00:41:21.425509Z"
+    }
    }
   }
  ]
